fixed the button text, messed with main div wrap

--- a/style.css
+++ b/style.css
@@ -27,11 +27,10 @@ ul {
 
 a {
     text-decoration: none;
-    color: #c6b2b2;
 }
 
-a:hover {
-    color: #da5653;
+a, a:visited {
+    color: inherit;
 }
 
 /* 
@@ -72,13 +71,15 @@ idk man it works i guess
 .nav-button {
     background-color: transparent;
     border-color: transparent;
-    font-size: 24px;
+    color: #c6b2b2;
+    font-size: 22px;
     border-radius: 16px;
+    padding: 6px 14px;
 }
 
 .nav-button:hover {
-    box-shadow: 3px 3px 6px 4px #00000066,
-    -3px -3px 6px 4px #ffffff20;
+    box-shadow: 1px 1px 6px 4px #00000077,
+    -0.5px -0.5px 6px 4px #ffffff22;
     cursor: pointer;
 }
 
@@ -87,6 +88,7 @@ idk man it works i guess
     justify-content: space-between;
     align-items: flex-start;
     padding: 96px 0;
+    flex-wrap: wrap;
 }
 
 .content-main-info {
@@ -124,15 +126,15 @@ idk man it works i guess
 
 .content-main-button:hover {
     background-color: #00000033;
+    color: #da5653;
     cursor: pointer;
 }
 
 .content-main-image {
     max-width: 640px;
     max-height: 460px;
-    flex: 0 1 0;
-    border: solid 2px;
-    border-color: to-linear;
+    flex-shrink: 1;
+    border: solid 2px #e08e5d88;
     border-radius: 32px;
     box-shadow: 12px 12px 12px 12px #00000066;
 }
@@ -148,7 +150,7 @@ idk man it works i guess
 .gallery-card-container {
     display: flex;
     flex-wrap: wrap;
-    padding: 128px;
+    padding: 96px;
     gap: 64px;
 }
 
@@ -162,12 +164,15 @@ idk man it works i guess
 }
 
 .gallery-card-image {
-    width: 280px;
-    height: 280px;
-    border: solid 3px #e08e5d;
+    width: 320px;
+    height: 400px;
+
     border-radius: 64px / 16px;
-    box-shadow: 0px 4px 4px 4px #302d2e33;
+    box-shadow: 0px 4px 4px 4px #302d2e33,
+    0px 1px 2px 4px #e08e5d88;
     flex: none;
+    object-fit: cover;
+    background-color: #302d2e;
 }
 
 .gallery-card-text {
